--- a/CONTROLES/Panel/Templates/crud_usuarios/actualizar.html
+++ b/CONTROLES/Panel/Templates/crud_usuarios/actualizar.html
@@ -1,7 +1,100 @@
 {%extends '../index_master.html' %}
 
 {% block content %}
-<div class="right_col" role="main">
-<h1>Actualizar usuario</h1>
-</div>
+    <div class="right_col" role="main">
+        <h1>Actualizar usuario</h1>
+        <form action="actualizar" method="POST">
+            {% csrf_token %} 
+
+            <div class="form-group row">
+                <label for="id" class="col-4 col-form-label">id</label> 
+                <div class="col-8">
+                    <div class="input-group">
+                        <div class="input-group-addon">
+                            <i class="fa fa-address-card"></i>
+                        </div>   
+                        
+                        
+                        <select id="id" name="id" >
+                            {% for u in usuarios %}
+                            <option value="{{u.id}}"> {{ u.id }} </option>
+                            {% endfor %}
+                        </select>
+                        
+                    </div>
+                </div>
+            </div>
+
+            
+            <div class="form-group row">
+                
+                <label for="nombre" class="col-4 col-form-label">Nombre</label> 
+                <div class="col-8">
+                    <div class="input-group">
+                        <div class="input-group-addon">
+                            <i class="fa fa-address-card"></i>
+                        </div> 
+                    <input id="nombre" name="nombre" placeholder="nombre" type="text" required="required" class="form-control">
+                    </div>
+                </div>
+            </div>
+
+                <div class="form-group row">
+                    <label for="apellido" class="col-4 col-form-label">Apellido</label> 
+                    <div class="col-8">
+                    <div class="input-group">
+                        <div class="input-group-addon">
+                        <i class="fa fa-address-card-o"></i>
+                        </div> 
+                        <input id="apellido" name="apellido" placeholder="rivas" type="text" required="required" class="form-control">
+                    </div>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="correo" class="col-4 col-form-label">Correo</label> 
+                    <div class="col-8">
+                    <div class="input-group">
+                        <div class="input-group-addon">
+                        <i class="fa fa-paste"></i>
+                        </div> 
+                        <input id="correo" name="correo" type="text" required="required" class="form-control">
+                    </div>
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="teléfono" class="col-4 col-form-label">Teléfono</label> 
+                    <div class="col-8">
+                    <div class="input-group">
+                        <div class="input-group-addon">
+                        <i class="fa fa-phone"></i>
+                        </div> 
+                        <input id="teléfono" name="telefono" type="number" required="required" class="form-control">
+                    </div>
+                    </div>
+                </div>
+
+            <div class="form-group row">
+                <label for="f_nacimiento" class="col-4 col-form-label">Fecha de nacimiento</label> 
+                <div class="col-8">
+                    <div class="input-group">
+                        <div class="input-group-addon">
+                            <i class="fa fa-calendar"></i>
+                        </div> 
+                    <input id="f_nacimiento" name="f_nacimiento" type="date" required="required" class="form-control">
+                    </div>
+                </div>
+            </div> 
+
+            <div class="form-group row">
+                <div class="offset-4 col-8">
+                  <button name="submit" type="submit" class="btn btn-warning "><i class="fa fa-user-plus"></i>   Actualizar</button>
+                </div>
+              </div>
+            </form>
+      
+
+
+    </div>
 {% endblock %}
