--- a/CONTROLES/Panel/Templates/crud_usuarios/agregar.html
+++ b/CONTROLES/Panel/Templates/crud_usuarios/agregar.html
@@ -4,7 +4,8 @@
 <div class="right_col" role="main">
     <h1>Agregar usuario</h1>
 
-    <form>
+    <form action="agregar" method="POST">
+      {% csrf_token %} 
         <div class="form-group row">
           <label for="nombre" class="col-4 col-form-label">Nombre</label> 
           <div class="col-8">
@@ -34,7 +35,7 @@
               <div class="input-group-addon">
                 <i class="fa fa-paste"></i>
               </div> 
-              <input id="correo" name="correo" type="email" required="required" class="form-control">
+              <input id="correo" name="correo" type="text" required="required" class="form-control">
             </div>
           </div>
         </div>
@@ -45,7 +46,7 @@
               <div class="input-group-addon">
                 <i class="fa fa-phone"></i>
               </div> 
-              <input id="teléfono" name="teléfono" type="number" required="required" class="form-control">
+              <input id="teléfono" name="telefono" type="number" required="required" class="form-control">
             </div>
           </div>
         </div>
