--- a/CONTROLES/Panel/Templates/crud_usuarios/eliminar.html
+++ b/CONTROLES/Panel/Templates/crud_usuarios/eliminar.html
@@ -1,9 +1,42 @@
 {%extends '../index_master.html' %}
 
 {% block content %}
-<div class="right_col" role="main">
-    <h1>Eliminar usuario</h1>
+    <div class="right_col" role="main">
+        <h1>Eliminar usuario</h1>
+        <form action="eliminar" method="POST">
+            {% csrf_token %} 
+            
+            <div class="form-group row">
+                <label for="id" class="col-4 col-form-label">id</label> 
+                <div class="col-8">
+                    <div class="input-group">
+                        <div class="input-group-addon">
+                            <i class="fa fa-address-card"></i>
+                        </div>   
+                        
+                        
+                        <select id="id" name="id" >
+                            {% for u in usuarios %}
+                            <option value="{{u.id}}"> {{ u.id }} </option>
+                            {% endfor %}
+                        </select>
+                        
+                    </div>
+                </div>
+            </div>
+                <div class="form-group row">
+                    <div class="offset-4 col-8">
+                    <button name="submit" type="submit" class="btn btn-danger "><i class="fa fa-user-plus"></i>   Eliminar</button>
+                    </div>
+                </div>
+            </form>
+
+
+
     </div>
+
+    
+        
 
 
 
