--- a/CONTROLES/Panel/Templates/crud_usuarios/listar.html
+++ b/CONTROLES/Panel/Templates/crud_usuarios/listar.html
@@ -7,26 +7,34 @@
     <h1>Lista de usuario</h1>
     <div class="table-responsive">
         <table class="table table-striped table-hover table-sm table-dark border-info">
-          <thead>
+            <thead>
             <tr>
-              <th scope="col">#</th>
-              <th scope="col">Lorem</th>
-              <th scope="col">Ipsum</th>
-              <th scope="col">Dolor</th>
+                <th scope="col">ID</th>
+                <th scope="col">Nombre</th>
+                <th scope="col">Apellido</th>
+                <th scope="col">Correo</th>
+                <th scope="col">Telefono</th>
+                <th scope="col">Fecha de nacimiento</th>
+                <th scope="col">Fecha de registro</th>
             </tr>
-          </thead>
-          <tbody>
+            </thead>
+        <tbody>
+
+        {% for u in usuarios %}    
             <tr>
-              <th scope="row">1</th>
-              <td>Sit</td>
-              <td>Amet</td>
-              <td>Consectetur</td>
+                <th scope="row"> {{u.id}} </th>
+                <td> {{u.nombre}} </td>
+                <td> {{u.apellido}} </td>
+                <td> {{u.correo}} </td>
+                <td> {{u.telefono}} </td>
+                <td> {{u.f_nacimiento}} </td>
+                <td> {{u.f_registro}}  </td>
             </tr>
-            
-          </tbody>
-      
+            {%  endfor  %}
+        </tbody>
+
         </table>
-      </div>
+    </div>
 <br>
 
 <script src="{% static 'code/highcharts.js' %}"></script>
