--- a/CONTROLES/Panel/Templates/crud_usuarios/actualizar.html
+++ b/CONTROLES/Panel/Templates/crud_usuarios/actualizar.html
@@ -2,8 +2,11 @@
 
 {% block content %}
     <div class="right_col" role="main">
-        <h1>Actualizar usuario</h1>
+        
+        <h1>Actualizar usuario #{{nombre}} </h1>
+        
         <form action="actualizar" method="POST">
+            
             {% csrf_token %} 
 
             <div class="form-group row">
@@ -17,7 +20,7 @@
                         
                         <select id="id" name="id" >
                             {% for u in usuarios %}
-                            <option value="{{u.id}}"> {{ u.id }} </option>
+                            <option value="{{u.id}}" {% if u.id == usuario.id %} selected {% endif %}> {{ u.id }} </option>
                             {% endfor %}
                         </select>
                         
@@ -34,7 +37,7 @@
                         <div class="input-group-addon">
                             <i class="fa fa-address-card"></i>
                         </div> 
-                    <input id="nombre" name="nombre" placeholder="nombre" type="text" required="required" class="form-control">
+                    <input id="nombre" name="nombre" placeholder="nombre" type="text" required="required" class="form-control" value = " {{ usuario.nombre}}  ">
                     </div>
                 </div>
             </div>
@@ -46,7 +49,7 @@
                         <div class="input-group-addon">
                         <i class="fa fa-address-card-o"></i>
                         </div> 
-                        <input id="apellido" name="apellido" placeholder="rivas" type="text" required="required" class="form-control">
+                        <input id="apellido" name="apellido" placeholder="rivas" type="text" required="required" class="form-control" value = " {{ usuario.apellido}}">
                     </div>
                     </div>
                 </div>
@@ -58,7 +61,7 @@
                         <div class="input-group-addon">
                         <i class="fa fa-paste"></i>
                         </div> 
-                        <input id="correo" name="correo" type="text" required="required" class="form-control">
+                        <input id="correo" name="correo" type="text" required="required" class="form-control" value = " {{ usuario.correo}}">
                     </div>
                     </div>
                 </div>
@@ -70,7 +73,7 @@
                         <div class="input-group-addon">
                         <i class="fa fa-phone"></i>
                         </div> 
-                        <input id="teléfono" name="telefono" type="number" required="required" class="form-control">
+                        <input id="telefono" name="telefono" type="number" required="required" class="form-control" value = "{{ usuario.telefono}}">
                     </div>
                     </div>
                 </div>
@@ -82,7 +85,7 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div> 
-                    <input id="f_nacimiento" name="f_nacimiento" type="date" required="required" class="form-control">
+                    <input id="f_nacimiento" name="f_nacimiento" type="date" required="required" class="form-control" value = " {{ usuario.f_nacimiento}}">
                     </div>
                 </div>
             </div> 
