--- a/CONTROLES/Panel/Templates/index_master.html
+++ b/CONTROLES/Panel/Templates/index_master.html
@@ -72,8 +72,8 @@
                     <ul class="nav child_menu">
                       <li><a href="listar"> <i class="fa fa-users"></i>Listar</a></li>
                       <li><a href="agregar"><i class="fa fa-user-plus"></i>Agregar</a></li>
-                      <li><a href="actualizar"><i class="fa fa-user"></i>Actualizar</a></li>
-                      <li><a href="eliminar"><i class="fa fa-user-times"></i>Eliminar</a></li>
+                      <li><a href="/actualizar/0"><i class="fa fa-user"></i>Actualizar</a></li>
+                      <li><a href="/eliminar/0"><i class="fa fa-user-times"></i>Eliminar</a></li>
                     </ul>
                 
                 </ul>
