--- a/CONTROLES/Panel/Templates/crud_usuarios/actualizar.html
+++ b/CONTROLES/Panel/Templates/crud_usuarios/actualizar.html
@@ -5,7 +5,7 @@
         
         <h1>Actualizar usuario #{{nombre}} </h1>
         
-        <form action="actualizar" method="POST">
+        <form action="" method="POST">
             
             {% csrf_token %} 
 
@@ -93,6 +93,7 @@
             <div class="form-group row">
                 <div class="offset-4 col-8">
                   <button name="submit" type="submit" class="btn btn-warning "><i class="fa fa-user-plus"></i>   Actualizar</button>
+                  <button name="back"  class="btn btn-primary" onclick="window.location.href='localhost:8000'"><i class="fa fa-arrow-left" aria-hidden="true" ></i>Volver</button>
                 </div>
               </div>
             </form>
