--- a/CONTROLES/Panel/Templates/crud_usuarios/listar.html
+++ b/CONTROLES/Panel/Templates/crud_usuarios/listar.html
@@ -5,6 +5,13 @@
 
 <div class="right_col" role="main">
     <h1>Lista de usuario</h1>
+    <div>
+        <button name="agregar" class="btn btn-primary" onclick="window.location.href='agregar'"><i class=" fa fa-plus "></i>Nuevo usuario</button>
+        <input type="text" name="keyword" id="keyword" class="form-control" style="width: 200px; display: inline-block">
+        <buttn type="submit" name="search" class="btn btn-success"><i class="fa fa-search"></i></button>
+        
+    </div>
+    
     <div class="table-responsive">
         <table class="table table-striped table-hover table-sm table-dark border-info">
             <thead>
@@ -32,7 +39,7 @@
                 <td> {{u.f_registro}}  </td>
                 <td> 
                     <button class="btn btn-warning" onclick="window.location.href='actualizar/{{u.id}} '"><i class="fa fa-refresh"></i></button>
-                    <button class="btn btn-danger"  onclick="window.location.href='eliminar/{{u.id}} '"><i class="fa fa-trash"></i></button>
+                    <button class="btn btn-danger" onclick="window.location.href='eliminar'"><i class="fa fa-trash"></i></button>
                 </td>
             </tr>
             {%  endfor  %}
